syntax = "proto3";

import "google/protobuf/duration.proto";

package ua.lviv.iot;

enum VehicleType {
  UNKNOWN = 0;
  CAR = 1;
  BUS = 2;
  MOTORCYCLE = 3;
}

message Vehicle {
  string number = 1;
  VehicleType type_of_vehicle = 2;
  google.protobuf.Duration duration_of_use_of_parking_spot = 3;
  bool is_ticket_received = 4;
}

message CreateVehicleRequest {
  Vehicle vehicle = 1;
}

message CreateVehicleResponse {
  Vehicle vehicle = 1;
}

message GetByIdVehicleRequest {
  string vehicle_id = 1;
}

message UpdateVehicleRequest {
  string vehicle_id = 1;
  Vehicle vehicle  = 2;
}

message DeleteVehicleRequest {
  string vehicle_id = 1;
}

message DeleteVehicleResponse {}
